--- a/Session I/Session 1.Rmd
+++ b/Session I/Session 1.Rmd
@@ -3,7 +3,8 @@ title: "Initiation to R software Session I"
 author: "Pierre Michel"
 date: "Master AMSE 1st year, 2019"
 output:
-  ioslides_presentation: 
+  beamer_presentation: default
+  ioslides_presentation:
     transition: slower
 ---
 
@@ -82,12 +83,13 @@ The first thing to do is to run R (type `R` in a terminal on Unix, or run the Rg
 * To create an object, we use an **assignment operator**: `<-` or `=`.
 
 ```{r assign, echo=T, eval=F}
-# Try these examples
+# Try this example
 n = 5
 M = matrix(1:10, 2, 5)
 N <- c(1, 2, 3)
 h = n + N
-n = 5 ; M = matrix(1:10, 2, 5); N <- c(1, 2, 3); h = n + N
+n = 5 ; M = matrix(1:10, 2, 5); N <- c(1, 2, 3); 
+h = n + N
 ```
 
 * To print the value of an object, type its name.
@@ -228,7 +230,7 @@ The function `sample()` draws random samples, with or without replacement, unifo
 u = sample(1:10)
 v = sample(1:10, 3)
 w = sample(1:2, 5, replace = T)
-x = sample(c(1, 2, 3, 4), 3, prob = c(0.1, 0.2, 0.6, 0.1))
+x = sample(1:4, 3, prob = c(0.1, 0.2, 0.6, 0.1))
 print(u); print(v); print(w); print(x);
 ```
 
@@ -237,10 +239,10 @@ print(u); print(v); print(w); print(x);
 The user can draw random samples from a given distribution, in the following example we only consider normal and Poisson distributions, so do not hesistate to see the other [available distrubtions](https://stat.ethz.ch/R-manual/R-devel/library/stats/html/Distributions.html). 
 
 ```{r create_random_vector_dist, echo=T, eval=T, fig.height= 2.5}
-u = rnorm(100) # normal distribution with parameters 0 and 1
-v = rnorm(100, 2, 3) # normal distribution with parameters 2 and 3
-w = rpois(100, 3) # Poisson distribution with parameter 3
-par(mfrow = c(1,3)); hist(u); hist(v); hist(w); # plot histograms
+u = rnorm(100) # normal distribution N(0,1)
+v = rnorm(100, 2, 3) # normal distribution N(2,3)
+w = rpois(100, 3) # Poisson distribution P(3)
+par(mfrow = c(1,3)); hist(u); hist(v); hist(w);
 ```
 
 ## Element-wise vector operations
@@ -383,7 +385,8 @@ factor(1:3); factor(1:3, levels=1:5)
 ## Creating factors
 
 ```{r fac_create2, echo=T, eval=T, warning=F}
-factor(1:3, exclude=2); factor(1:3, labels=c("a", "b", "c"))
+factor(1:3, exclude=2);  
+factor(1:3, labels=c("a", "b", "c"))
 x=1:3; is.factor(x); as.factor(x)
 ```
 
@@ -391,7 +394,9 @@ x=1:3; is.factor(x); as.factor(x)
 
 Divides the range of a numeric vector in $n$ classes et encodes the values according to the class they belong. The resulting object is a factor.
 
-```{r fac_cut, echo=T, eval=T, warning=F}
+
+\footnotesize
+```{r fac_cut, echo=T, eval=T, warning=F, fig.width = 8}
 v=1:10; cut(v, breaks=2)
 cut(v, breaks=c(1,5.5,10))
 ```
