--- a/Session III/TD3.Rmd
+++ b/Session III/TD3.Rmd
@@ -23,7 +23,7 @@ e) Export the new `data.frame` to the working directory in a text file, with spa
 
 ## 2) Probability distributions
 
-a) Compute the probability that a random variable $X$ following a binomial distribution $\mathcal{B}(10,\frac{1}{3})$ takes the value $0, 1, 2,..., 10$, i.e\ $P(X = k)$.  
+a) Compute the probability that a random variable $X$ following a binomial distribution $\mathcal{B}(10,\frac{1}{3})$ takes the value $0, 1, 2,..., 10$, i.e\ $P(X = k)$.
 b) Compute the probability that a random variable $X$ following a binomial distribution $\mathcal{B}(10,\frac{1}{3})$ takes values less than or equal to $10$ and greater than $5$, i.e\ $P(5<X\leq 10)$.
 c) Compute the value x for which $P(X<=x)=0.97$, where $X$ follows a normal distribution $\mathcal{N}(0,1)$.
 d) Compute the quantile of order 2% of a Student's distribution with 5 degrees of freedom ($\mathcal{t}(5)$.
@@ -41,7 +41,7 @@ legend("bottomright", legend = c("3 gears", "4 gears", "5 gears"), col = unique(
 ```
 \normalsize
 
-a) For continuous variables you can have a statistical summary computing standard empirical estimations: mean, variance, first and third quartiles and median. Compute these estimators on *mtcars* columns that correspond to continuous variables (use `summary()`). Plot the corresponding histograms/boxplots (use `hist()` and `boxplot()`). Comment.
+a) For continuous variables you can have a statistical summary with standard empirical estimations: mean, variance, first and third quartiles and median. Compute these *mtcars* columns that correspond to continuous variables (use `summary()`). Plot the histograms/boxplots (use `hist()` and `boxplot()`).
 b) Identify the variables for which the assumption of normality is plausible (use `qqnorm()` and `qqline()`).
 c) Evaluate the possible correlations between these variables (use `cor()`).
 d) For discrete variables, provide a table of counts (use `table()`) and a graphical representation of this table (`barplot(table()`). Comment.
@@ -53,8 +53,7 @@ d) For discrete variables, provide a table of counts (use `table()`) and a graph
 a) Generate 100 samples of size 100 from a normal distribution $\mathcal{N}(3,1)$. For each sample, compute the mean and the empirical variance (use `apply()`, `replicate()`).
 b) Compute the mean and variance of the two series.
 c) Plot on the same figure the histogram of relative counts with a kernel estimation of the means series.
-d) Re-run for 100, 500, 1000 samples. What do you observe ?
-e) Comment the results. 
+d) Re-run for 100, 500, 1000 samples. What do you observe ? Comment the results. 
 
 ## 5) Random sampling
 
